--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "lint": "eslint .",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "Zakaria Rahali zakaria.rahali@emsi-edu.ma",
-  "license": "ISC",
-  "description": "Backend pour l'application de journal avec gestion des entrées et des activités.",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "emailjs": "^4.0.3",
-    "express": "^4.21.2",
-    "helmet": "^8.0.0",
-    "json2csv": "^5.0.7",
-    "jsonwebtoken": "^9.0.2",
-    "moment": "^2.30.1",
-    "mongoose": "^8.10.1",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^6.10.0"
+    "country-list": "^2.3.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "express-winston": "^4.2.0",
+    "geoip-lite": "^1.4.10",
+    "mongoose": "^8.7.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7"
   }
 }
