--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "api/emails.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node api/emails.js",
+    "dev": "nodemon api/emails.js",
     "lint": "eslint .",
     "test": "jest"
   },
@@ -14,12 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "cors": "^2.8.5",
     "country-list": "^2.3.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.4.0",
-    "express-winston": "^4.2.0",
     "geoip-lite": "^1.4.10",
     "mongoose": "^8.7.0",
     "winston": "^3.14.2"
